# ttgen

./: CMakeLists.txt  README.md
include/: list.h  logic.h  queue.h  stack.h  utils.h
src/: CMakeLists.txt  list.c  logic.c  main.c  queue.c  stack.c  utils.c
test/: CMakeLists.txt  test_calculate.c  test_evaluate_expression.c  test_expression_to_str.c  test_get_variables.c  test_infix_to_postfix.c  test_list.c  test_logic.c  test_queue.c  test_split_expression.c  test_stack.c  test_str_to_operator_idx.c  test_str_to_variable_idx.c  test_tokenize.c  test_update_variables.c  test_utils.c
